--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,8 @@ on:
 
 jobs:
 
-  build:
+  buildGo:
+    name: buildGo
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -19,10 +20,11 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.23'
 
     - name: Build
-      run: go build -v ./...
+      run: go build  -o myapp
 
     - name: Test
       run: go test -v ./...
+
