--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
 
   buildGo:
     name: buildGo
-    runs-on: wade    
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v4
 
