--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,9 +10,8 @@ jobs:
 
   buildImage:
     name: buildImage
-    runs-on: wade
-
+    runs-on: [ "wade", "ubuntu-latest"]
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag server:latest
