--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
 
   buildGo:
     name: buildGo
-    runs-on: wade
+    runs-on: [ "wade", "ubuntu-latest"]
     steps:
     - uses: actions/checkout@v4
 
