--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,18 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-# on:
-#   # we can also trigger manually in case needed
-#   workflow_dispatch:
 
 jobs:
+  buildImage:
+    name: build test
+    runs-on: [ "wade"]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag server:latest
   deploy:
-    name: Build On X64
+    needs: buildImage
+    name: deploy test
     runs-on: [ "self-hosted"]
     permissions:
       # Need this to be allowed to publish image to registry
