--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - run: env
       - run: echo $ENV1
+      - run: echo $ENVWADE
+      - run: echo ENVWADE
       - uses: actions/checkout@v4
       - name: deploy
         run: |
